--- a/src/components/Nav1.css
+++ b/src/components/Nav1.css
@@ -15,11 +15,11 @@
     font-weight: 700;
     width: 50px;
     height: 20px;
-    color: #bd98a6;
+    color: #8d7a81;
     
 }
 .dropdown{
-    position: relative;
+     position: relative; 
     display:flex;
   
 }
@@ -34,8 +34,9 @@
 .dropdown:hover .hidden{
     display :flex;
    gap: 20px;
-    margin-top: 50px;
-    position: absolute; 
+   padding-top: 50px;
+    position: absolute;  
+    
    width: 400px;
 
 }
@@ -43,15 +44,18 @@
     display: flex;
  flex-direction: column;
  gap: 5px;
+ align-items: flex-start;
 }
 .face p:hover{
     color: #ca2f6b;
 }
 .eyes{
  background-color: #cfc8c8;
+ padding-left: 10px;
  display: flex;
  flex-direction: column;
  gap: 5px;
+ align-items: flex-start;
 }
 .eyes p:hover{
     color: #ca2f6b;
